# DealCourier

./: .env.example  .gitignore  DealCourier.sh  README.md  config_init.yaml  database.py  init.py  prompt_search_mini.json  prompt_value_mini.json  pushbullet.py  pyproject.toml  scrape.py  start.bat  start.command  test.ipynb  tutti.py  utils.py
config/: config.yaml  prompt_search_mini.json  prompt_value_mini.json
frontend/app/: page.tsx
src/dealcourier/: __init__.py  config.py  distance.py  logging_setup.py  main.py
src/dealcourier/ai/: client.py  evaluator.py  prompts.py
src/dealcourier/ai/providers/: __init__.py  base.py  openai_compatible_provider.py
src/dealcourier/db/: engine.py  models.py
src/dealcourier/knowledge/: products.py
src/dealcourier/notifications/: discord.py
src/dealcourier/scheduler/: runner.py
src/dealcourier/scrapers/: anibis.py  base.py  ricardo.py  tutti.py
src/dealcourier/web/: app.py
src/dealcourier/web/frontend/templates/: index.html
src/dealcourier/web/routers/: config.py  dashboard.py  logs.py  prompts.py  scheduler.py
utils/: database.py  init.py  openai.py  pushbullet.py  tutti.py  utils.py
