[project]
name = "dealcourier"
version = "1.1.0"
description = "Swiss marketplace deal hunter with AI-powered valuation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "aiofiles>=24.1",
    "discord-webhook>=1.3",
    "python-dotenv>=1.0",
]

[project.scripts]
dealcourier = "dealcourier.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dealcourier"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
